--- a/docs-ref-autogen/azure-iot-common/TransportConfig.yml
+++ b/docs-ref-autogen/azure-iot-common/TransportConfig.yml
@@ -5,6 +5,7 @@ items:
     fullName: TransportConfig
     children:
       - azure-iot-common.TransportConfig.deviceId
+      - azure-iot-common.TransportConfig.gatewayHostName
       - azure-iot-common.TransportConfig.host
       - azure-iot-common.TransportConfig.sharedAccessKey
       - azure-iot-common.TransportConfig.sharedAccessKeyName
@@ -27,6 +28,22 @@ items:
     summary: Device unique identifier.
     syntax:
       content: 'deviceId: string'
+      return:
+        type:
+          - string
+  - uid: azure-iot-common.TransportConfig.gatewayHostName
+    name: gatewayHostName
+    fullName: gatewayHostName
+    children: []
+    langs:
+      - typeScript
+    type: property
+    summary: >-
+      IP address or internet name of the host machine working as a device or
+      protocol gateway.  Used when communicating with Azure Edge devices.
+    optional: true
+    syntax:
+      content: 'gatewayHostName?: string'
       return:
         type:
           - string
