--- a/docs-ref-autogen/azure-iot-provisioning-device/ProvisioningDeviceClient.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-device/ProvisioningDeviceClient.yml
@@ -18,7 +18,9 @@ items:
     type: method
     langs:
       - typeScript
-    summary: Factory method to use to create a DeviceClient object.
+    summary: >-
+      Construct a client object which can be used to communicate with the Azure
+      Device Provisioning Service.
     syntax:
       content: >-
         static function create(provisioningHost: string, idScope: string,
@@ -28,21 +30,40 @@ items:
         - id: provisioningHost
           type:
             - string
-          description: ''
+          description: >-
+            Host running the Device Provisioning Service.  Can be found in the
+            Azure portal in the 'Essentials' section of the 'Overview' tab as
+            the string 'Global device endpoint'
         - id: idScope
           type:
             - string
-          description: ''
+          description: >-
+            Scope of IDs for the Device Provisioning Service.  Can be found in
+            the Azure portal in the 'Essentials' section of the 'Overview' tab
+            as the string 'ID Scope'
         - id: transport
           type:
             - X509ProvisioningTransport | TpmProvisioningTransport
-          description: Transport instance to use
+          description: >-
+            Constructor function for provisioning transport to use.  Can be one
+            of the following:
+                                     [azure-iot-provisioning-device-http.Http](xref:azure-iot-provisioning-device-http.Http)
+                                     [azure-iot-provisioning-device-amqp.Amqp](xref:azure-iot-provisioning-device-amqp.Amqp)
+                                     [azure-iot-provisioning-device-amqp.AmqpWs](xref:azure-iot-provisioning-device-amqp.AmqpWs)
+                                     [azure-iot-provisioning-device-mqtt.Mqtt](xref:azure-iot-provisioning-device-mqtt.Mqtt)
+                                     [azure-iot-provisioning-device-mqtt.MqttWs](xref:azure-iot-provisioning-device-mqtt.MqttWs)
         - id: securityClient
           type:
             - >-
               azure-iot-provisioning-device.X509SecurityClient |
               TpmSecurityClient
-          description: ''
+          description: |
+            Instance of Scurity client object implementing either the
+                                     [X509SecurityClient](xref:azure-iot-provisioning-device%3AX509SecurityClient) or the
+                                     [TpmSecurityClient](xref:azure-iot-provisioning-device%3ATpmSecurityClient) interface.
+                                     Suggested implementations of these interfaces include
+                                     [X509Security](xref:azure-iot-security-x509.X509Security) or
+                                     [TpmSecurityClient](xref:azure-iot-security-tpm.TpmSecurityClient)
       return:
         type:
           - azure-iot-provisioning-device.RegistrationClient
