--- a/docs-ref-autogen/azure-iot-provisioning-service/IndividualEnrollment.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/IndividualEnrollment.yml
@@ -5,6 +5,7 @@ items:
     fullName: IndividualEnrollment
     children:
       - azure-iot-provisioning-service.IndividualEnrollment.attestation
+      - azure-iot-provisioning-service.IndividualEnrollment.capabilities
       - azure-iot-provisioning-service.IndividualEnrollment.createdDateTimeUtc
       - azure-iot-provisioning-service.IndividualEnrollment.deviceId
       - azure-iot-provisioning-service.IndividualEnrollment.etag
@@ -33,6 +34,22 @@ items:
       return:
         type:
           - azure-iot-provisioning-service.AttestationMechanism
+  - uid: azure-iot-provisioning-service.IndividualEnrollment.capabilities
+    name: capabilities
+    fullName: capabilities
+    children: []
+    langs:
+      - typeScript
+    type: property
+    summary: >-
+      The capabilities of the device that will be provisioned using this
+      enrollment record.
+    optional: true
+    syntax:
+      content: 'capabilities?: DeviceCapabilities'
+      return:
+        type:
+          - azure-iot-provisioning-service.DeviceCapabilities
   - uid: azure-iot-provisioning-service.IndividualEnrollment.createdDateTimeUtc
     name: createdDateTimeUtc
     fullName: createdDateTimeUtc
@@ -173,6 +190,11 @@ references:
       - name: AttestationMechanism
         fullName: AttestationMechanism
         uid: azure-iot-provisioning-service.AttestationMechanism
+  - uid: azure-iot-provisioning-service.DeviceCapabilities
+    spec.typeScript:
+      - name: DeviceCapabilities
+        fullName: DeviceCapabilities
+        uid: azure-iot-provisioning-service.DeviceCapabilities
   - uid: azure-iot-provisioning-service.InitialTwin
     spec.typeScript:
       - name: InitialTwin
