--- a/docs-ref-autogen/azure-iot-provisioning-service/index.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/index.yml
@@ -8,6 +8,7 @@ items:
       - azure-iot-provisioning-service.BulkEnrollmentOperation
       - azure-iot-provisioning-service.BulkEnrollmentOperationError
       - azure-iot-provisioning-service.BulkEnrollmentOperationResult
+      - azure-iot-provisioning-service.DeviceCapabilities
       - azure-iot-provisioning-service.DeviceRegistrationState
       - azure-iot-provisioning-service.EnrollmentGroup
       - azure-iot-provisioning-service.IndividualEnrollment
@@ -42,6 +43,8 @@ references:
     name: BulkEnrollmentOperationError
   - uid: azure-iot-provisioning-service.BulkEnrollmentOperationResult
     name: BulkEnrollmentOperationResult
+  - uid: azure-iot-provisioning-service.DeviceCapabilities
+    name: DeviceCapabilities
   - uid: azure-iot-provisioning-service.DeviceRegistrationState
     name: DeviceRegistrationState
   - uid: azure-iot-provisioning-service.EnrollmentGroup
