--- a/docs-ref-autogen/azure-iot-common/Message.yml
+++ b/docs-ref-autogen/azure-iot-common/Message.yml
@@ -19,6 +19,7 @@ items:
       - azure-iot-common.Message.userId
       - azure-iot-common.Message.getBytes
       - azure-iot-common.Message.getData
+      - azure-iot-common.Message.isBufferConvertible
     langs:
       - typeScript
     type: class
@@ -242,3 +243,25 @@ items:
       return:
         type:
           - azure-iot-common.Message.BufferConvertible
+  - uid: azure-iot-common.Message.isBufferConvertible
+    name: isBufferConvertible
+    children: []
+    type: method
+    langs:
+      - typeScript
+    summary: >-
+      Returns true if the given object is of type
+      <xref:Message.BufferConvertible>.  Objects of type
+      <xref:Message.BufferConvertible> can be passed into the <xref:Message>
+      constructor.
+    syntax:
+      content: 'static function isBufferConvertible(obj: any)'
+      parameters:
+        - id: obj
+          type:
+            - any
+          description: |
+            object instance to check
+      return:
+        type:
+          - boolean
