--- a/docs-ref-autogen/azure-iot-common/ConnectionString.yml
+++ b/docs-ref-autogen/azure-iot-common/ConnectionString.yml
@@ -156,3 +156,9 @@ items:
       return:
         type:
           - azure-iot-common.ConnectionString
+references:
+  - uid: azure-iot-common.ConnectionString
+    spec.typeScript:
+      - name: ConnectionString
+        fullName: ConnectionString
+        uid: azure-iot-common.ConnectionString
