--- a/docs-ref-autogen/azure-iot-common/ExponentialBackOffWithJitter.yml
+++ b/docs-ref-autogen/azure-iot-common/ExponentialBackOffWithJitter.yml
@@ -134,3 +134,9 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: azure-iot-common.ExponentialBackoffWithJitterParameters
+    spec.typeScript:
+      - name: ExponentialBackoffWithJitterParameters
+        fullName: ExponentialBackoffWithJitterParameters
+        uid: azure-iot-common.ExponentialBackoffWithJitterParameters
