--- a/docs-ref-autogen/azure-iot-common/SharedAccessSignature.yml
+++ b/docs-ref-autogen/azure-iot-common/SharedAccessSignature.yml
@@ -35,10 +35,6 @@ items:
       return:
         type:
           - string
-    exceptions:
-      - type: ReferenceError
-        description: |
-          Will be thrown if the argument is falsy.
   - uid: azure-iot-common.SharedAccessSignature.toString
     name: toString
     children: []
@@ -85,10 +81,6 @@ items:
       return:
         type:
           - azure-iot-common.SharedAccessSignature
-    exceptions:
-      - type: ReferenceError
-        description: |
-          Will be thrown if one of the arguments is falsy.
   - uid: azure-iot-common.SharedAccessSignature.parse
     name: parse
     children: []
@@ -114,7 +106,9 @@ items:
       return:
         type:
           - azure-iot-common.SharedAccessSignature
-    exceptions:
-      - type: FormatError
-        description: |
-          Will be thrown if the source string is malformed.
+references:
+  - uid: azure-iot-common.SharedAccessSignature
+    spec.typeScript:
+      - name: SharedAccessSignature
+        fullName: SharedAccessSignature
+        uid: azure-iot-common.SharedAccessSignature
