--- a/docs-ref-autogen/azure-iot-device/SharedAccessKeyAuthenticationProvider.yml
+++ b/docs-ref-autogen/azure-iot-device/SharedAccessKeyAuthenticationProvider.yml
@@ -99,3 +99,9 @@ items:
       return:
         type:
           - azure-iot-device.SharedAccessKeyAuthenticationProvider
+references:
+  - uid: azure-iot-device.SharedAccessKeyAuthenticationProvider
+    spec.typeScript:
+      - name: SharedAccessKeyAuthenticationProvider
+        fullName: SharedAccessKeyAuthenticationProvider
+        uid: azure-iot-device.SharedAccessKeyAuthenticationProvider
