--- a/docs-ref-autogen/azure-iot-common/Message.yml
+++ b/docs-ref-autogen/azure-iot-common/Message.yml
@@ -51,7 +51,7 @@ items:
       - typeScript
     summary: 'Creates a new <xref:azure-iot-common.Message> object'
     syntax:
-      content: 'new Message(data: BufferConvertible)'
+      content: 'new Message(data: Message.BufferConvertible)'
       parameters:
         - id: data
           type:
@@ -265,3 +265,14 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: azure-iot-common.Message.BufferConvertible
+    spec.typeScript:
+      - name: BufferConvertible
+        fullName: BufferConvertible
+        uid: azure-iot-common.Message.BufferConvertible
+  - uid: azure-iot-common.Properties
+    spec.typeScript:
+      - name: Properties
+        fullName: Properties
+        uid: azure-iot-common.Properties
