--- a/docs-ref-autogen/azure-iot-device/Twin.yml
+++ b/docs-ref-autogen/azure-iot-device/Twin.yml
@@ -106,23 +106,8 @@ items:
             function that shall be called back with either the twin or an error
             if the transport fails to retrieve the twin.
 references:
-  - uid: azure-iot-device.MethodParams
+  - uid: azure-iot-device.TwinProperties
     spec.typeScript:
-      - name: MethodParams
-        fullName: MethodParams
-        uid: azure-iot-device.MethodParams
-  - uid: azure-iot-device.MethodCallback
-    spec.typeScript:
-      - name: MethodCallback
-        fullName: MethodCallback
-        uid: azure-iot-device.MethodCallback
-  - uid: azure-iot-device.DeviceClientOptions
-    spec.typeScript:
-      - name: DeviceClientOptions
-        fullName: DeviceClientOptions
-        uid: azure-iot-device.DeviceClientOptions
-  - uid: azure-iot-device.ModuleClient
-    spec.typeScript:
-      - name: ModuleClient
-        fullName: ModuleClient
-        uid: azure-iot-device.ModuleClient
+      - name: TwinProperties
+        fullName: TwinProperties
+        uid: azure-iot-device.TwinProperties
