--- a/docs-ref-autogen/azure-iothub/Client.yml
+++ b/docs-ref-autogen/azure-iothub/Client.yml
@@ -144,12 +144,6 @@ items:
           description: |
             The callback to call with the result of the method execution.
           optional: true
-    exceptions:
-      - type: ReferenceError
-        description: 'If one of the required parameters is null, undefined or empty.'
-      - type: TypeError
-        description: |
-          If one of the parameters is of the wrong type.
   - uid: azure-iothub.Client.invokeDeviceMethod_1
     name: invokeDeviceMethod
     children: []
@@ -179,12 +173,6 @@ items:
             - azure-iothub.Client.Callback<any>
           description: ''
           optional: true
-    exceptions:
-      - type: ReferenceError
-        description: 'If one of the required parameters is null, undefined or empty.'
-      - type: TypeError
-        description: |
-          If one of the parameters is of the wrong type.
   - uid: azure-iothub.Client.open
     name: open
     children: []
@@ -213,8 +201,8 @@ items:
     summary: Sends a message to a device.
     syntax:
       content: >-
-        function send(deviceId: string, message: Message | BufferConvertible,
-        done?: Callback<MessageEnqueued>)
+        function send(deviceId: string, message: Message |
+        Message.BufferConvertible, done?: Callback<MessageEnqueued>)
       parameters:
         - id: deviceId
           type:
@@ -222,7 +210,7 @@ items:
           description: The identifier of an existing device identity.
         - id: message
           type:
-            - Message | BufferConvertible
+            - Message | Message.BufferConvertible
           description: |-
             The body of the message to send to the device.
                                          If `message` is not of type
@@ -238,10 +226,6 @@ items:
                                          transport-specific response object useful for
                                          logging or debugging.
           optional: true
-    exceptions:
-      - type: ReferenceError
-        description: |
-          If `deviceId` or `message` is null, undefined or empty.
   - uid: azure-iothub.Client.setRetryPolicy
     name: setRetryPolicy
     children: []
@@ -276,7 +260,7 @@ items:
     syntax:
       content: >-
         static function fromConnectionString(connStr: string, transportCtor?:
-        TransportCtor)
+        Client.TransportCtor)
       parameters:
         - id: connStr
           type:
@@ -305,7 +289,7 @@ items:
     syntax:
       content: >-
         static function fromSharedAccessSignature(sharedAccessSignature: string,
-        transportCtor?: TransportCtor)
+        transportCtor?: Client.TransportCtor)
       parameters:
         - id: sharedAccessSignature
           type:
