--- a/docs-ref-autogen/azure-iothub/Registry.yml
+++ b/docs-ref-autogen/azure-iothub/Registry.yml
@@ -130,7 +130,7 @@ items:
     syntax:
       content: >-
         function addConfiguration(configuration: Configuration, done:
-        ResponseCallback)
+        Registry.ResponseCallback)
       parameters:
         - id: configuration
           type:
@@ -148,12 +148,6 @@ items:
                                                  body of the response, and a transport-specific
                                                  response object useful for logging or
                                                  debugging.
-    exceptions:
-      - type: ReferenceError
-        description: The configuration or done parameter is falsy.
-      - type: ArgumentError
-        description: |
-          The configuration object is missing the id property
   - uid: azure-iothub.Registry.addDevices
     name: addDevices
     children: []
@@ -164,7 +158,7 @@ items:
     syntax:
       content: >-
         function addDevices(devices: DeviceDescription[], done:
-        BulkDeviceIdentityCallback)
+        Registry.BulkDeviceIdentityCallback)
       parameters:
         - id: devices
           type:
@@ -191,7 +185,7 @@ items:
       - typeScript
     summary: Add the given module to the registry.
     syntax:
-      content: 'function addModule(module: Module, done: ResponseCallback)'
+      content: 'function addModule(module: Module, done: Registry.ResponseCallback)'
       parameters:
         - id: module
           type:
@@ -207,12 +201,6 @@ items:
                                            body of the response, and a transport-specific
                                            response object useful for logging or
                                            debugging.
-    exceptions:
-      - type: ReferenceError
-        description: If the module or done argument is falsy.
-      - type: ArgumentError
-        description: |
-          If the module object is missing a deviceId or moduleId value.
   - uid: azure-iothub.Registry.applyConfigurationContentOnDevice
     name: applyConfigurationContentOnDevice
     children: []
@@ -223,7 +211,7 @@ items:
     syntax:
       content: >-
         function applyConfigurationContentOnDevice(deviceId: string, content:
-        ConfigurationContent, done: ResponseCallback)
+        ConfigurationContent, done: Registry.ResponseCallback)
       parameters:
         - id: deviceId
           type:
@@ -243,10 +231,6 @@ items:
                                                      body of the response, and a transport-specific
                                                      response object useful for logging or
                                                      debugging.
-    exceptions:
-      - type: ReferenceError
-        description: |
-          If the deviceId, content, or done argument is falsy.
   - uid: azure-iothub.Registry.cancelJob
     name: cancelJob
     children: []
@@ -255,7 +239,7 @@ items:
       - typeScript
     summary: Cancel a bulk import/export job.
     syntax:
-      content: 'function cancelJob(jobId: string, done: JobCallback)'
+      content: 'function cancelJob(jobId: string, done: Registry.JobCallback)'
       parameters:
         - id: jobId
           type:
@@ -278,7 +262,9 @@ items:
       - typeScript
     summary: Creates a new device identity on an IoT hub.
     syntax:
-      content: 'function create(deviceInfo: DeviceDescription, done: DeviceCallback)'
+      content: >-
+        function create(deviceInfo: DeviceDescription, done:
+        Registry.DeviceCallback)
       parameters:
         - id: deviceInfo
           type:
@@ -323,13 +309,6 @@ items:
       return:
         type:
           - azure-iothub.Query
-    exceptions:
-      - type: ReferenceError
-        description: If the sqlQuery argument is falsy.
-      - type: TypeError
-        description: >
-          If the sqlQuery argument is not a string or the pageSize argument not
-          a number, null or undefined.
   - uid: azure-iothub.Registry.delete
     name: delete
     children: []
@@ -338,7 +317,7 @@ items:
       - typeScript
     summary: Removes an existing device identity from an IoT hub.
     syntax:
-      content: 'function delete(deviceId: string, done: ResponseCallback)'
+      content: 'function delete(deviceId: string, done: Registry.ResponseCallback)'
       parameters:
         - id: deviceId
           type:
@@ -365,7 +344,7 @@ items:
     syntax:
       content: >-
         function exportDevicesToBlob(outputBlobContainerUri: string,
-        excludeKeys: boolean, done: JobCallback)
+        excludeKeys: boolean, done: Registry.JobCallback)
       parameters:
         - id: outputBlobContainerUri
           type:
@@ -396,7 +375,7 @@ items:
       Requests information about an existing device identity
                          on an IoT hub.
     syntax:
-      content: 'function get(deviceId: string, done: DeviceCallback)'
+      content: 'function get(deviceId: string, done: Registry.DeviceCallback)'
       parameters:
         - id: deviceId
           type:
@@ -437,10 +416,6 @@ items:
           description: |
             The callback which will be called with either an Error object
                                                  or a module:azure-iothub.Configuration object with the configuration details.
-    exceptions:
-      - type: ReferenceError
-        description: |
-          The configurationId or done argument is falsy
   - uid: azure-iothub.Registry.getConfigurations
     name: getConfigurations
     children: []
@@ -462,10 +437,6 @@ items:
             The callback which will be called with either an Error object
                                                  or an array of module:azure-iothub.Configuration objects
                                                  for all the configurations.
-    exceptions:
-      - type: ReferenceError
-        description: |
-          The done argument is falsy
   - uid: azure-iothub.Registry.getJob
     name: getJob
     children: []
@@ -474,7 +445,7 @@ items:
       - typeScript
     summary: Get the status of a bulk import/export job.
     syntax:
-      content: 'function getJob(jobId: string, done: JobCallback)'
+      content: 'function getJob(jobId: string, done: Registry.JobCallback)'
       parameters:
         - id: jobId
           type:
@@ -515,10 +486,6 @@ items:
           description: |
             The callback which will be called with either an Error object
                                          or the module:azure-iothub.Module object for the requested module
-    exceptions:
-      - type: ReferenceError
-        description: |
-          If the deviceId, moduleId, or done argument is falsy.
   - uid: azure-iothub.Registry.getModuleTwin
     name: getModuleTwin
     children: []
@@ -545,10 +512,6 @@ items:
           description: |-
             The callback that will be called with either an Error object or
                                             the module twin instance.
-    exceptions:
-      - type: ReferenceError
-        description: |
-          If the deviceId, moduleId, or done argument is falsy.
   - uid: azure-iothub.Registry.getModulesOnDevice
     name: getModulesOnDevice
     children: []
@@ -572,10 +535,6 @@ items:
             The callback which will be called with either an Error object
                                          or an array of module:azure-iothub.Module objects
                                          for all the modules.
-    exceptions:
-      - type: ReferenceError
-        description: |
-          If the deviceId or done argument is falsy.
   - uid: azure-iothub.Registry.getRegistryStatistics
     name: getRegistryStatistics
     children: []
@@ -600,7 +559,7 @@ items:
       - typeScript
     summary: Gets the Device Twin of the device with the specified device identifier.
     syntax:
-      content: 'function getTwin(deviceId: string, done: ResponseCallback)'
+      content: 'function getTwin(deviceId: string, done: Registry.ResponseCallback)'
       parameters:
         - id: deviceId
           type:
@@ -622,7 +581,7 @@ items:
     syntax:
       content: >-
         function importDevicesFromBlob(inputBlobContainerUri: string,
-        outputBlobContainerUri: string, done: JobCallback)
+        outputBlobContainerUri: string, done: Registry.JobCallback)
       parameters:
         - id: inputBlobContainerUri
           type:
@@ -694,7 +653,7 @@ items:
     syntax:
       content: >-
         function removeConfiguration(configurationId: string, done:
-        ResponseCallback)
+        Registry.ResponseCallback)
       parameters:
         - id: configurationId
           type:
@@ -710,10 +669,6 @@ items:
                                                  body of the response, and a transport-specific
                                                  response object useful for logging or
                                                  debugging.
-    exceptions:
-      - type: ReferenceError
-        description: |
-          The configurationId or done argument is falsy
   - uid: azure-iothub.Registry.removeDevices
     name: removeDevices
     children: []
@@ -724,7 +679,7 @@ items:
     syntax:
       content: >-
         function removeDevices(devices: DeviceDescription[], forceRemove:
-        boolean, done: BulkDeviceIdentityCallback)
+        boolean, done: Registry.BulkDeviceIdentityCallback)
       parameters:
         - id: devices
           type:
@@ -758,7 +713,7 @@ items:
       - typeScript
     summary: Remove the given module from the registry
     syntax:
-      content: 'function removeModule(module: Module, done: ResponseCallback)'
+      content: 'function removeModule(module: Module, done: Registry.ResponseCallback)'
       parameters:
         - id: module
           type:
@@ -774,10 +729,6 @@ items:
                                            body of the response, and a transport-specific
                                            response object useful for logging or
                                            debugging.
-    exceptions:
-      - type: ReferenceError
-        description: |
-          If the done deviceId, moduleId, or argument is falsy.
   - uid: azure-iothub.Registry.removeModule_1
     name: removeModule
     children: []
@@ -788,7 +739,7 @@ items:
     syntax:
       content: >-
         function removeModule(deviceId: string, moduleId: string, done:
-        ResponseCallback)
+        Registry.ResponseCallback)
       parameters:
         - id: deviceId
           type:
@@ -802,10 +753,6 @@ items:
           type:
             - azure-iothub.Registry.ResponseCallback
           description: ''
-    exceptions:
-      - type: ReferenceError
-        description: |
-          If the done deviceId, moduleId, or argument is falsy.
   - uid: azure-iothub.Registry.update
     name: update
     children: []
@@ -816,7 +763,9 @@ items:
       Updates an existing device identity on an IoT hub with
                          the given device information.
     syntax:
-      content: 'function update(deviceInfo: DeviceDescription, done: DeviceCallback)'
+      content: >-
+        function update(deviceInfo: DeviceDescription, done:
+        Registry.DeviceCallback)
       parameters:
         - id: deviceInfo
           type:
@@ -846,7 +795,7 @@ items:
     syntax:
       content: >-
         function updateConfiguration(configuration: Configuration, done:
-        ResponseCallback)
+        Registry.ResponseCallback)
       parameters:
         - id: configuration
           type:
@@ -864,14 +813,6 @@ items:
                                                  body of the response, and a transport-specific
                                                  response object useful for logging or
                                                  debugging.
-    exceptions:
-      - type: ReferenceError
-        description: The configuration or done argument is falsy
-      - type: ArgumentError
-        description: |
-          The eTag is missing from the Configuration object,
-                                               but forceUpdate is not set to true, or the configuration
-                                               object is missing an id property.
   - uid: azure-iothub.Registry.updateConfiguration_1
     name: updateConfiguration
     children: []
@@ -882,7 +823,7 @@ items:
     syntax:
       content: >-
         function updateConfiguration(configuration: Configuration, forceUpdate:
-        boolean, done: ResponseCallback)
+        boolean, done: Registry.ResponseCallback)
       parameters:
         - id: configuration
           type:
@@ -896,14 +837,6 @@ items:
           type:
             - azure-iothub.Registry.ResponseCallback
           description: ''
-    exceptions:
-      - type: ReferenceError
-        description: The configuration or done argument is falsy
-      - type: ArgumentError
-        description: |
-          The eTag is missing from the Configuration object,
-                                               but forceUpdate is not set to true, or the configuration
-                                               object is missing an id property.
   - uid: azure-iothub.Registry.updateDevices
     name: updateDevices
     children: []
@@ -914,7 +847,7 @@ items:
     syntax:
       content: >-
         function updateDevices(devices: DeviceDescription[], forceUpdate:
-        boolean, done?: BulkDeviceIdentityCallback)
+        boolean, done?: Registry.BulkDeviceIdentityCallback)
       parameters:
         - id: devices
           type:
@@ -949,7 +882,7 @@ items:
       - typeScript
     summary: Update the given module object in the registry
     syntax:
-      content: 'function updateModule(module: Module, done: ResponseCallback)'
+      content: 'function updateModule(module: Module, done: Registry.ResponseCallback)'
       parameters:
         - id: module
           type:
@@ -965,14 +898,6 @@ items:
                                            body of the response, and a transport-specific
                                            response object useful for logging or
                                            debugging.
-    exceptions:
-      - type: ReferenceError
-        description: If the module or done argument is falsy.
-      - type: ArgumentError
-        description: |
-          If the module object is missing an etag and
-                                         forceUpdate is not set to true, or the module
-                                         object is missing it's deviceId or moduleId property.
   - uid: azure-iothub.Registry.updateModule_1
     name: updateModule
     children: []
@@ -983,7 +908,7 @@ items:
     syntax:
       content: >-
         function updateModule(module: Module, forceUpdate: boolean, done:
-        ResponseCallback)
+        Registry.ResponseCallback)
       parameters:
         - id: module
           type:
@@ -997,14 +922,6 @@ items:
           type:
             - azure-iothub.Registry.ResponseCallback
           description: ''
-    exceptions:
-      - type: ReferenceError
-        description: If the module or done argument is falsy.
-      - type: ArgumentError
-        description: |
-          If the module object is missing an etag and
-                                         forceUpdate is not set to true, or the module
-                                         object is missing it's deviceId or moduleId property.
   - uid: azure-iothub.Registry.updateModuleTwin
     name: updateModuleTwin
     children: []
@@ -1015,7 +932,7 @@ items:
     syntax:
       content: >-
         function updateModuleTwin(deviceId: string, moduleId: string, patch:
-        any, etag: string, done: ResponseCallback)
+        any, etag: string, done: Registry.ResponseCallback)
       parameters:
         - id: deviceId
           type:
@@ -1042,10 +959,6 @@ items:
           description: |-
             The callback that will be called with either an Error object or
                                              the module twin instance.
-    exceptions:
-      - type: ReferenceError
-        description: |
-          If the deviceId, moduleId, patch, etag, or done argument is falsy.
   - uid: azure-iothub.Registry.updateTwin
     name: updateTwin
     children: []
@@ -1056,7 +969,7 @@ items:
     syntax:
       content: >-
         function updateTwin(deviceId: string, patch: any, etag: string, done:
-        ResponseCallback)
+        Registry.ResponseCallback)
       parameters:
         - id: deviceId
           type:
@@ -1120,12 +1033,90 @@ items:
         type:
           - azure-iothub.Registry
 references:
-  - uid: 'Callback<azure-iothub.Twin[]>'
+  - uid: 'azure-iothub.Registry.DeviceRegistryOperationError[]'
+    spec.typeScript:
+      - name: DeviceRegistryOperationError
+        fullName: DeviceRegistryOperationError
+        uid: azure-iothub.Registry.DeviceRegistryOperationError
+      - name: '[]'
+        fullName: '[]'
+  - uid: azure-iothub.Device.Capabilities
+    spec.typeScript:
+      - name: Capabilities
+        fullName: Capabilities
+        uid: azure-iothub.Device.Capabilities
+  - uid: azure-iothub.Configuration
+    spec.typeScript:
+      - name: Configuration
+        fullName: Configuration
+        uid: azure-iothub.Configuration
+  - uid: azure-iothub.Registry.ResponseCallback
+    spec.typeScript:
+      - name: ResponseCallback
+        fullName: ResponseCallback
+        uid: azure-iothub.Registry.ResponseCallback
+  - uid: 'azure-iothub.Registry.DeviceDescription[]'
+    spec.typeScript:
+      - name: DeviceDescription
+        fullName: DeviceDescription
+        uid: azure-iothub.Registry.DeviceDescription
+      - name: '[]'
+        fullName: '[]'
+  - uid: azure-iothub.Registry.BulkDeviceIdentityCallback
+    spec.typeScript:
+      - name: BulkDeviceIdentityCallback
+        fullName: BulkDeviceIdentityCallback
+        uid: azure-iothub.Registry.BulkDeviceIdentityCallback
+  - uid: azure-iothub.Module
+    spec.typeScript:
+      - name: Module
+        fullName: Module
+        uid: azure-iothub.Module
+  - uid: azure-iothub.ConfigurationContent
+    spec.typeScript:
+      - name: ConfigurationContent
+        fullName: ConfigurationContent
+        uid: azure-iothub.ConfigurationContent
+  - uid: azure-iothub.Registry.JobCallback
+    spec.typeScript:
+      - name: JobCallback
+        fullName: JobCallback
+        uid: azure-iothub.Registry.JobCallback
+  - uid: azure-iothub.Registry.DeviceDescription
+    spec.typeScript:
+      - name: DeviceDescription
+        fullName: DeviceDescription
+        uid: azure-iothub.Registry.DeviceDescription
+  - uid: azure-iothub.Registry.DeviceCallback
+    spec.typeScript:
+      - name: DeviceCallback
+        fullName: DeviceCallback
+        uid: azure-iothub.Registry.DeviceCallback
+  - uid: azure-iothub.Query
+    spec.typeScript:
+      - name: Query
+        fullName: Query
+        uid: azure-iothub.Query
+  - uid: Callback<azure-iothub.Registry.RegistryStatistics>
     spec.typeScript:
       - name: Callback<
         fullName: Callback<
-      - name: Twin
-        fullName: Twin
-        uid: azure-iothub.Twin
+      - name: RegistryStatistics
+        fullName: RegistryStatistics
+        uid: azure-iothub.Registry.RegistryStatistics
+      - name: '>'
+        fullName: '>'
+  - uid: 'Callback<azure-iothub.Device[]>'
+    spec.typeScript:
+      - name: Callback<
+        fullName: Callback<
+      - name: Device
+        fullName: Device
+        uid: azure-iothub.Device
       - name: '[]>'
         fullName: '[]>'
+  - uid: azure-iothub.Registry
+    spec.typeScript:
+      - name: Registry
+        fullName: Registry
+        uid: azure-iothub.Registry
