--- a/docs-ref-autogen/azure-iothub/ServiceReceiver.yml
+++ b/docs-ref-autogen/azure-iothub/ServiceReceiver.yml
@@ -39,7 +39,9 @@ items:
       - typeScript
     summary: ''
     syntax:
-      content: 'function abandon(message: Message, done?: Callback<MessageAbandoned>)'
+      content: >-
+        function abandon(message: Message, done?:
+        Client.Callback<MessageAbandoned>)
       parameters:
         - id: message
           type:
@@ -58,7 +60,9 @@ items:
       - typeScript
     summary: ''
     syntax:
-      content: 'function complete(message: Message, done?: Callback<MessageCompleted>)'
+      content: >-
+        function complete(message: Message, done?:
+        Client.Callback<MessageCompleted>)
       parameters:
         - id: message
           type:
@@ -106,7 +110,9 @@ items:
       - typeScript
     summary: ''
     syntax:
-      content: 'function reject(message: Message, done?: Callback<MessageRejected>)'
+      content: >-
+        function reject(message: Message, done?:
+        Client.Callback<MessageRejected>)
       parameters:
         - id: message
           type:
@@ -118,90 +124,24 @@ items:
           description: ''
           optional: true
 references:
-  - uid: 'azure-iothub.Registry.DeviceRegistryOperationError[]'
+  - uid: azure-iothub.Client.Callback<MessageAbandoned>
     spec.typeScript:
-      - name: DeviceRegistryOperationError
-        fullName: DeviceRegistryOperationError
-        uid: azure-iothub.Registry.DeviceRegistryOperationError
-      - name: '[]'
-        fullName: '[]'
-  - uid: azure-iothub.Device.Capabilities
+      - name: Callback
+        fullName: Callback
+        uid: azure-iothub.Client.Callback
+      - name: <MessageAbandoned>
+        fullName: <MessageAbandoned>
+  - uid: azure-iothub.Client.Callback<MessageCompleted>
     spec.typeScript:
-      - name: Capabilities
-        fullName: Capabilities
-        uid: azure-iothub.Device.Capabilities
-  - uid: azure-iothub.Configuration
+      - name: Callback
+        fullName: Callback
+        uid: azure-iothub.Client.Callback
+      - name: <MessageCompleted>
+        fullName: <MessageCompleted>
+  - uid: azure-iothub.Client.Callback<MessageRejected>
     spec.typeScript:
-      - name: Configuration
-        fullName: Configuration
-        uid: azure-iothub.Configuration
-  - uid: azure-iothub.Registry.ResponseCallback
-    spec.typeScript:
-      - name: ResponseCallback
-        fullName: ResponseCallback
-        uid: azure-iothub.Registry.ResponseCallback
-  - uid: 'azure-iothub.Registry.DeviceDescription[]'
-    spec.typeScript:
-      - name: DeviceDescription
-        fullName: DeviceDescription
-        uid: azure-iothub.Registry.DeviceDescription
-      - name: '[]'
-        fullName: '[]'
-  - uid: azure-iothub.Registry.BulkDeviceIdentityCallback
-    spec.typeScript:
-      - name: BulkDeviceIdentityCallback
-        fullName: BulkDeviceIdentityCallback
-        uid: azure-iothub.Registry.BulkDeviceIdentityCallback
-  - uid: azure-iothub.Module
-    spec.typeScript:
-      - name: Module
-        fullName: Module
-        uid: azure-iothub.Module
-  - uid: azure-iothub.ConfigurationContent
-    spec.typeScript:
-      - name: ConfigurationContent
-        fullName: ConfigurationContent
-        uid: azure-iothub.ConfigurationContent
-  - uid: azure-iothub.Registry.JobCallback
-    spec.typeScript:
-      - name: JobCallback
-        fullName: JobCallback
-        uid: azure-iothub.Registry.JobCallback
-  - uid: azure-iothub.Registry.DeviceDescription
-    spec.typeScript:
-      - name: DeviceDescription
-        fullName: DeviceDescription
-        uid: azure-iothub.Registry.DeviceDescription
-  - uid: azure-iothub.Registry.DeviceCallback
-    spec.typeScript:
-      - name: DeviceCallback
-        fullName: DeviceCallback
-        uid: azure-iothub.Registry.DeviceCallback
-  - uid: azure-iothub.Query
-    spec.typeScript:
-      - name: Query
-        fullName: Query
-        uid: azure-iothub.Query
-  - uid: Callback<azure-iothub.Registry.RegistryStatistics>
-    spec.typeScript:
-      - name: Callback<
-        fullName: Callback<
-      - name: RegistryStatistics
-        fullName: RegistryStatistics
-        uid: azure-iothub.Registry.RegistryStatistics
-      - name: '>'
-        fullName: '>'
-  - uid: 'Callback<azure-iothub.Device[]>'
-    spec.typeScript:
-      - name: Callback<
-        fullName: Callback<
-      - name: Device
-        fullName: Device
-        uid: azure-iothub.Device
-      - name: '[]>'
-        fullName: '[]>'
-  - uid: azure-iothub.Registry
-    spec.typeScript:
-      - name: Registry
-        fullName: Registry
-        uid: azure-iothub.Registry
+      - name: Callback
+        fullName: Callback
+        uid: azure-iothub.Client.Callback
+      - name: <MessageRejected>
+        fullName: <MessageRejected>
