--- a/docs-ref-autogen/toc.yml
+++ b/docs-ref-autogen/toc.yml
@@ -121,29 +121,11 @@
     - uid: azure-iot-common.Properties
       name: Properties
       items: []
-    - uid: azure-iot-common.Connected
-      name: Connected
-      items: []
     - uid: azure-iot-common.Disconnected
       name: Disconnected
       items: []
-    - uid: azure-iot-common.MessageAbandoned
-      name: MessageAbandoned
-      items: []
-    - uid: azure-iot-common.MessageCompleted
-      name: MessageCompleted
-      items: []
-    - uid: azure-iot-common.MessageEnqueued
-      name: MessageEnqueued
-      items: []
-    - uid: azure-iot-common.MessageRejected
-      name: MessageRejected
-      items: []
     - uid: azure-iot-common.SharedAccessSignatureUpdated
       name: SharedAccessSignatureUpdated
-      items: []
-    - uid: azure-iot-common.TransportConfigured
-      name: TransportConfigured
       items: []
     - uid: azure-iot-common.RetryOperation
       name: RetryOperation
@@ -165,22 +147,11 @@
       items: []
 - uid: azure-iot-device-http
   name: azure-iot-device-http
-  items:
-    - uid: azure-iot-device-http.Http
-      name: Http
-      items: []
+  items: []
 - uid: azure-iot-device-mqtt
   name: azure-iot-device-mqtt
-  items:
-    - uid: azure-iot-device-mqtt.Mqtt
-      name: Mqtt
-      items: []
-    - uid: azure-iot-device-mqtt.MqttWs
-      name: MqttWs
-      items: []
-- uid: azure-iot-device
-  name: azure-iot-device
-  items:
+  items: []
+- items:
     - uid: azure-iot-device.Client
       name: Client
       items: []
@@ -195,12 +166,6 @@
       items: []
     - uid: azure-iot-device.MethodResult
       name: MethodResult
-      items: []
-    - uid: azure-iot-device.MethodCallback
-      name: MethodCallback
-      items: []
-    - uid: azure-iot-device.AmqpTransportOptions
-      name: AmqpTransportOptions
       items: []
     - uid: azure-iot-device.DeviceClientOptions
       name: DeviceClientOptions
@@ -219,9 +184,6 @@
       items: []
     - uid: azure-iot-device.DeviceTransport
       name: DeviceTransport
-      items: []
-    - uid: azure-iot-device.TransportCtor
-      name: TransportCtor
       items: []
     - uid: azure-iot-device.IotEdgeAuthenticationProvider
       name: IotEdgeAuthenticationProvider
@@ -246,28 +208,13 @@
       items: []
 - uid: azure-iot-provisioning-device-amqp
   name: azure-iot-provisioning-device-amqp
-  items:
-    - uid: azure-iot-provisioning-device-amqp.Amqp
-      name: Amqp
-      items: []
-    - uid: azure-iot-provisioning-device-amqp.AmqpWs
-      name: AmqpWs
-      items: []
+  items: []
 - uid: azure-iot-provisioning-device-http
   name: azure-iot-provisioning-device-http
-  items:
-    - uid: azure-iot-provisioning-device-http.Http
-      name: Http
-      items: []
+  items: []
 - uid: azure-iot-provisioning-device-mqtt
   name: azure-iot-provisioning-device-mqtt
-  items:
-    - uid: azure-iot-provisioning-device-mqtt.Mqtt
-      name: Mqtt
-      items: []
-    - uid: azure-iot-provisioning-device-mqtt.MqttWs
-      name: MqttWs
-      items: []
+  items: []
 - uid: azure-iot-provisioning-device
   name: azure-iot-provisioning-device
   items:
@@ -289,14 +236,8 @@
     - uid: azure-iot-provisioning-device.RegistrationRequest
       name: RegistrationRequest
       items: []
-    - uid: azure-iot-provisioning-device.RegistrationResult
-      name: RegistrationResult
-      items: []
     - uid: azure-iot-provisioning-device.X509SecurityClient
       name: X509SecurityClient
-      items: []
-    - uid: azure-iot-provisioning-device.RegistrationStatus
-      name: RegistrationStatus
       items: []
     - uid: azure-iot-provisioning-device.X509Registration
       name: X509Registration
@@ -355,23 +296,8 @@
     - uid: azure-iot-provisioning-service.X509Certificates
       name: X509Certificates
       items: []
-    - uid: azure-iot-provisioning-service.AttestationTypes
-      name: AttestationTypes
-      items: []
-    - uid: azure-iot-provisioning-service.BulkOperationMode
-      name: BulkOperationMode
-      items: []
-    - uid: azure-iot-provisioning-service.ProvisioningStatus
-      name: ProvisioningStatus
-      items: []
-    - uid: azure-iot-provisioning-service.RegistrationStatus
-      name: RegistrationStatus
-      items: []
     - uid: azure-iot-provisioning-service.ProvisioningServiceClient
       name: ProvisioningServiceClient
-      items: []
-    - uid: azure-iot-provisioning-service.DeleteCallback
-      name: DeleteCallback
       items: []
     - uid: azure-iot-provisioning-service.Query
       name: Query
@@ -382,30 +308,21 @@
     - uid: azure-iot-provisioning-service.QuerySpecification
       name: QuerySpecification
       items: []
-    - uid: azure-iot-provisioning-service.QueryCallback
-      name: QueryCallback
-      items: []
 - uid: azure-iothub
   name: azure-iothub
   items:
-    - uid: azure-iothub.Amqp
-      name: Amqp
-      items: []
-    - uid: azure-iothub.AmqpWs
-      name: AmqpWs
-      items: []
     - uid: azure-iothub.Client
       name: Client
-      items: []
-    - uid: azure-iothub.Client.ServiceReceiver
-      name: ServiceReceiver
-      items: []
-    - uid: azure-iothub.Client.Transport
-      name: Transport
-      items: []
-    - uid: azure-iothub.Client.TransportConfigOptions
-      name: TransportConfigOptions
-      items: []
+      items:
+        - uid: azure-iothub.Client.ServiceReceiver
+          name: ServiceReceiver
+          items: []
+        - uid: azure-iothub.Client.Transport
+          name: Transport
+          items: []
+        - uid: azure-iothub.Client.TransportConfigOptions
+          name: TransportConfigOptions
+          items: []
     - uid: azure-iothub.Configuration
       name: Configuration
       items: []
@@ -417,27 +334,21 @@
       items: []
     - uid: azure-iothub.Device
       name: Device
-      items: []
-    - uid: azure-iothub.Device.Authentication
-      name: Authentication
-      items: []
-    - uid: azure-iothub.Device.Capabilities
-      name: Capabilities
-      items: []
-    - uid: azure-iothub.Device.X509Thumbprints
-      name: X509Thumbprints
-      items: []
+      items:
+        - uid: azure-iothub.Device.Authentication
+          name: Authentication
+          items: []
+        - uid: azure-iothub.Device.Capabilities
+          name: Capabilities
+          items: []
+        - uid: azure-iothub.Device.X509Thumbprints
+          name: X509Thumbprints
+          items: []
     - uid: azure-iothub.DeviceMethodParams
       name: DeviceMethodParams
       items: []
     - uid: azure-iothub.JobClient
       name: JobClient
-      items: []
-    - uid: azure-iothub.JobStatus
-      name: JobStatus
-      items: []
-    - uid: azure-iothub.JobType
-      name: JobType
       items: []
     - uid: azure-iothub.Module
       name: Module
@@ -447,25 +358,25 @@
       items: []
     - uid: azure-iothub.Registry
       name: Registry
-      items: []
-    - uid: azure-iothub.Registry.BulkRegistryOperationResult
-      name: BulkRegistryOperationResult
-      items: []
-    - uid: azure-iothub.Registry.DeviceDescription
-      name: DeviceDescription
-      items: []
-    - uid: azure-iothub.Registry.DeviceRegistryOperationError
-      name: DeviceRegistryOperationError
-      items: []
-    - uid: azure-iothub.Registry.QueryDescription
-      name: QueryDescription
-      items: []
-    - uid: azure-iothub.Registry.RegistryStatistics
-      name: RegistryStatistics
-      items: []
-    - uid: azure-iothub.Registry.TransportConfig
-      name: TransportConfig
-      items: []
+      items:
+        - uid: azure-iothub.Registry.BulkRegistryOperationResult
+          name: BulkRegistryOperationResult
+          items: []
+        - uid: azure-iothub.Registry.DeviceDescription
+          name: DeviceDescription
+          items: []
+        - uid: azure-iothub.Registry.DeviceRegistryOperationError
+          name: DeviceRegistryOperationError
+          items: []
+        - uid: azure-iothub.Registry.QueryDescription
+          name: QueryDescription
+          items: []
+        - uid: azure-iothub.Registry.RegistryStatistics
+          name: RegistryStatistics
+          items: []
+        - uid: azure-iothub.Registry.TransportConfig
+          name: TransportConfig
+          items: []
     - uid: azure-iothub.ServiceReceiver
       name: ServiceReceiver
       items: []
