--- a/docs-ref-autogen/azure-iot-common/Message.yml
+++ b/docs-ref-autogen/azure-iot-common/Message.yml
@@ -31,18 +31,6 @@ items:
       transport-agnostic, meaning it works the same way over AMQP, MQTT and
       HTTP.
     package: azure-iot-common
-  - uid: azure-iot-common.Message.BufferConvertible
-    name: BufferConvertible
-    fullName: BufferConvertible
-    children: []
-    langs:
-      - typeScript
-    type: class
-    summary: >-
-
-      "BufferConvertible" is a type alias. It refers to Buffer, String, any[]
-      and ArrayBuffer.
-    package: azure-iot-common
   - uid: azure-iot-common.Message.constructor
     name: Message
     children: []
@@ -282,11 +270,13 @@ items:
     package: azure-iot-common
 references:
   - uid: azure-iot-common.Message.BufferConvertible
+    name: BufferConvertible
     spec.typeScript:
       - name: BufferConvertible
         fullName: BufferConvertible
         uid: azure-iot-common.Message.BufferConvertible
   - uid: azure-iot-common.Properties
+    name: Properties
     spec.typeScript:
       - name: Properties
         fullName: Properties
