--- a/docs-ref-autogen/azure-iot-device-mqtt/MqttWs.yml
+++ b/docs-ref-autogen/azure-iot-device-mqtt/MqttWs.yml
@@ -18,6 +18,7 @@ items:
     package: azure-iot-device-mqtt
 references:
   - uid: azure-iot-device-mqtt.Mqtt
+    name: Mqtt
     spec.typeScript:
       - name: Mqtt
         fullName: Mqtt
