--- a/docs-ref-autogen/azure-iothub/Client.Callback.yml
+++ b/docs-ref-autogen/azure-iothub/Client.Callback.yml
@@ -1,107 +1,14 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: azure-iothub.Client.Transport
-    name: Transport
-    fullName: Transport
-    children:
-      - azure-iothub.Client.Transport.connect
-      - azure-iothub.Client.Transport.disconnect
-      - azure-iothub.Client.Transport.getFeedbackReceiver
-      - azure-iothub.Client.Transport.getFileNotificationReceiver
-      - azure-iothub.Client.Transport.send
-    langs:
-      - typeScript
-    type: interface
-    summary: ''
-    extends:
-      name: EventEmitter
-    package: azure-iothub
-  - uid: azure-iothub.Client.Transport.connect
-    name: connect
+  - uid: azure-iothub.Client.Callback
+    name: Callback
+    fullName: Callback<T>
     children: []
-    type: method
     langs:
       - typeScript
-    summary: ''
-    syntax:
-      content: 'function connect(done?: Callback<Connected>)'
-      parameters:
-        - id: done
-          type:
-            - azure-iothub.Client.Callback<Connected>
-          description: ''
-          optional: true
-    package: azure-iothub
-  - uid: azure-iothub.Client.Transport.disconnect
-    name: disconnect
-    children: []
-    type: method
-    langs:
-      - typeScript
-    summary: ''
-    syntax:
-      content: 'function disconnect(done: Callback<Disconnected>)'
-      parameters:
-        - id: done
-          type:
-            - azure-iothub.Client.Callback<Disconnected>
-          description: ''
-    package: azure-iothub
-  - uid: azure-iothub.Client.Transport.getFeedbackReceiver
-    name: getFeedbackReceiver
-    children: []
-    type: method
-    langs:
-      - typeScript
-    summary: ''
-    syntax:
-      content: 'function getFeedbackReceiver(done: Callback<ServiceReceiver>)'
-      parameters:
-        - id: done
-          type:
-            - azure-iothub.Client.Callback<azure-iothub.Client.ServiceReceiver>
-          description: ''
-    package: azure-iothub
-  - uid: azure-iothub.Client.Transport.getFileNotificationReceiver
-    name: getFileNotificationReceiver
-    children: []
-    type: method
-    langs:
-      - typeScript
-    summary: ''
-    syntax:
-      content: 'function getFileNotificationReceiver(done: Callback<ServiceReceiver>)'
-      parameters:
-        - id: done
-          type:
-            - azure-iothub.Client.Callback<azure-iothub.Client.ServiceReceiver>
-          description: ''
-    package: azure-iothub
-  - uid: azure-iothub.Client.Transport.send
-    name: send
-    children: []
-    type: method
-    langs:
-      - typeScript
-    summary: ''
-    syntax:
-      content: >-
-        function send(deviceId: string, message: Message, done?:
-        Callback<MessageEnqueued>)
-      parameters:
-        - id: deviceId
-          type:
-            - string
-          description: ''
-        - id: message
-          type:
-            - Message
-          description: ''
-        - id: done
-          type:
-            - azure-iothub.Client.Callback<MessageEnqueued>
-          description: ''
-          optional: true
+    type: class
+    summary: |+
+
     package: azure-iothub
 references:
   - uid: azure-iothub.Client.Callback<MessageAbandoned>
