--- a/docs-ref-autogen/azure-iothub/Client.yml
+++ b/docs-ref-autogen/azure-iothub/Client.yml
@@ -4,6 +4,9 @@ items:
     name: Client
     fullName: Client
     children:
+      - azure-iothub.Client.ServiceReceiver
+      - azure-iothub.Client.Transport
+      - azure-iothub.Client.TransportConfigOptions
       - azure-iothub.Client.Callback
       - azure-iothub.Client.TransportCtor
       - azure-iothub.Client.close
@@ -38,26 +41,6 @@ items:
       to create an IoT Hub service Client.
     extends:
       name: EventEmitter
-    package: azure-iothub
-  - uid: azure-iothub.Client.Callback
-    name: Callback
-    fullName: Callback<T>
-    children: []
-    langs:
-      - typeScript
-    type: class
-    summary: |+
-
-    package: azure-iothub
-  - uid: azure-iothub.Client.TransportCtor
-    name: TransportCtor
-    fullName: TransportCtor
-    children: []
-    langs:
-      - typeScript
-    type: class
-    summary: |+
-
     package: azure-iothub
   - uid: azure-iothub.Client.close
     name: close
@@ -317,6 +300,7 @@ items:
     package: azure-iothub
 references:
   - uid: azure-iothub.Client.Callback<MessageAbandoned>
+    name: Callback<MessageAbandoned>
     spec.typeScript:
       - name: Callback
         fullName: Callback
@@ -324,6 +308,7 @@ references:
       - name: <MessageAbandoned>
         fullName: <MessageAbandoned>
   - uid: azure-iothub.Client.Callback<MessageCompleted>
+    name: Callback<MessageCompleted>
     spec.typeScript:
       - name: Callback
         fullName: Callback
@@ -331,6 +316,7 @@ references:
       - name: <MessageCompleted>
         fullName: <MessageCompleted>
   - uid: azure-iothub.Client.Callback<MessageRejected>
+    name: Callback<MessageRejected>
     spec.typeScript:
       - name: Callback
         fullName: Callback
@@ -338,6 +324,7 @@ references:
       - name: <MessageRejected>
         fullName: <MessageRejected>
   - uid: azure-iothub.Client.Callback<Connected>
+    name: Callback<Connected>
     spec.typeScript:
       - name: Callback
         fullName: Callback
@@ -345,6 +332,7 @@ references:
       - name: <Connected>
         fullName: <Connected>
   - uid: azure-iothub.Client.Callback<Disconnected>
+    name: Callback<Disconnected>
     spec.typeScript:
       - name: Callback
         fullName: Callback
@@ -352,6 +340,7 @@ references:
       - name: <Disconnected>
         fullName: <Disconnected>
   - uid: azure-iothub.Client.Callback<azure-iothub.Client.ServiceReceiver>
+    name: ServiceReceiver>
     spec.typeScript:
       - name: Callback
         fullName: Callback
@@ -364,6 +353,7 @@ references:
       - name: '>'
         fullName: '>'
   - uid: azure-iothub.Client.Callback<MessageEnqueued>
+    name: Callback<MessageEnqueued>
     spec.typeScript:
       - name: Callback
         fullName: Callback
@@ -371,11 +361,13 @@ references:
       - name: <MessageEnqueued>
         fullName: <MessageEnqueued>
   - uid: azure-iothub.DeviceMethodParams
+    name: DeviceMethodParams
     spec.typeScript:
       - name: DeviceMethodParams
         fullName: DeviceMethodParams
         uid: azure-iothub.DeviceMethodParams
   - uid: azure-iothub.Client.Callback<any>
+    name: Callback<any>
     spec.typeScript:
       - name: Callback
         fullName: Callback
@@ -383,11 +375,13 @@ references:
       - name: <any>
         fullName: <any>
   - uid: azure-iothub.Client.TransportCtor
+    name: TransportCtor
     spec.typeScript:
       - name: TransportCtor
         fullName: TransportCtor
         uid: azure-iothub.Client.TransportCtor
   - uid: azure-iothub.Client
+    name: Client
     spec.typeScript:
       - name: Client
         fullName: Client
