--- a/docs-ref-autogen/azure-iothub/Device.ConnectionState.yml
+++ b/docs-ref-autogen/azure-iothub/Device.ConnectionState.yml
@@ -1,45 +1,16 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: azure-iothub.Device.X509Thumbprints
-    name: X509Thumbprints
-    fullName: X509Thumbprints
-    children:
-      - azure-iothub.Device.X509Thumbprints.primaryThumbprint
-      - azure-iothub.Device.X509Thumbprints.secondaryThumbprint
-    langs:
-      - typeScript
-    type: interface
-    summary: ''
-    package: azure-iothub
-  - uid: azure-iothub.Device.X509Thumbprints.primaryThumbprint
-    name: primaryThumbprint
-    fullName: primaryThumbprint
+  - uid: azure-iothub.Device.ConnectionState
+    name: ConnectionState
+    fullName: ConnectionState
     children: []
     langs:
       - typeScript
-    type: property
-    summary: ''
-    optional: true
-    syntax:
-      content: 'primaryThumbprint?: string'
-      return:
-        type:
-          - string
-    package: azure-iothub
-  - uid: azure-iothub.Device.X509Thumbprints.secondaryThumbprint
-    name: secondaryThumbprint
-    fullName: secondaryThumbprint
-    children: []
-    langs:
-      - typeScript
-    type: property
-    summary: ''
-    optional: true
-    syntax:
-      content: 'secondaryThumbprint?: string'
-      return:
-        type:
-          - string
+    type: class
+    summary: >-
+
+      "ConnectionState" is a type alias. It refers to "connected" and
+      "disconnected".
     package: azure-iothub
 references:
   - uid: azure-iothub.Device.X509Thumbprints
