--- a/docs-ref-autogen/azure-iothub/Device.yml
+++ b/docs-ref-autogen/azure-iothub/Device.yml
@@ -4,6 +4,9 @@ items:
     name: Device
     fullName: Device
     children:
+      - azure-iothub.Device.Authentication
+      - azure-iothub.Device.Capabilities
+      - azure-iothub.Device.X509Thumbprints
       - azure-iothub.Device.ConnectionState
       - azure-iothub.Device.DeviceStatus
       - azure-iothub.Device.constructor
@@ -41,29 +44,6 @@ items:
     package: azure-iothub
     deprecated:
       content: ''
-  - uid: azure-iothub.Device.ConnectionState
-    name: ConnectionState
-    fullName: ConnectionState
-    children: []
-    langs:
-      - typeScript
-    type: class
-    summary: >-
-
-      "ConnectionState" is a type alias. It refers to "connected" and
-      "disconnected".
-    package: azure-iothub
-  - uid: azure-iothub.Device.DeviceStatus
-    name: DeviceStatus
-    fullName: DeviceStatus
-    children: []
-    langs:
-      - typeScript
-    type: class
-    summary: |-
-
-      "DeviceStatus" is a type alias. It refers to "enabled" and "disabled".
-    package: azure-iothub
   - uid: azure-iothub.Device.constructor
     name: Device
     children: []
@@ -283,26 +263,31 @@ items:
     package: azure-iothub
 references:
   - uid: azure-iothub.Device.X509Thumbprints
+    name: X509Thumbprints
     spec.typeScript:
       - name: X509Thumbprints
         fullName: X509Thumbprints
         uid: azure-iothub.Device.X509Thumbprints
   - uid: azure-iothub.Device.Authentication
+    name: Authentication
     spec.typeScript:
       - name: Authentication
         fullName: Authentication
         uid: azure-iothub.Device.Authentication
   - uid: azure-iothub.Device.Capabilities
+    name: Capabilities
     spec.typeScript:
       - name: Capabilities
         fullName: Capabilities
         uid: azure-iothub.Device.Capabilities
   - uid: azure-iothub.Device.ConnectionState
+    name: ConnectionState
     spec.typeScript:
       - name: ConnectionState
         fullName: ConnectionState
         uid: azure-iothub.Device.ConnectionState
   - uid: azure-iothub.Device.DeviceStatus
+    name: DeviceStatus
     spec.typeScript:
       - name: DeviceStatus
         fullName: DeviceStatus
