--- a/docs-ref-autogen/azure-iothub/JobClient.yml
+++ b/docs-ref-autogen/azure-iothub/JobClient.yml
@@ -27,16 +27,6 @@ items:
       <xref:azure-iothub.JobClient.fromConnectionString> and
       <xref:azure-iothub.JobClient.fromSharedAccessSignature>.
     package: azure-iothub
-  - uid: azure-iothub.JobClient.JobCallback
-    name: JobCallback
-    fullName: JobCallback
-    children: []
-    langs:
-      - typeScript
-    type: class
-    summary: |+
-
-    package: azure-iothub
   - uid: azure-iothub.JobClient.cancelJob
     name: cancelJob
     children: []
@@ -268,31 +258,37 @@ items:
     package: azure-iothub
 references:
   - uid: azure-iothub.JobClient.JobCallback
+    name: JobCallback
     spec.typeScript:
       - name: JobCallback
         fullName: JobCallback
         uid: azure-iothub.JobClient.JobCallback
   - uid: azure-iothub.JobType
+    name: JobType
     spec.typeScript:
       - name: JobType
         fullName: JobType
         uid: azure-iothub.JobType
   - uid: azure-iothub.JobStatus
+    name: JobStatus
     spec.typeScript:
       - name: JobStatus
         fullName: JobStatus
         uid: azure-iothub.JobStatus
   - uid: azure-iothub.Query
+    name: Query
     spec.typeScript:
       - name: Query
         fullName: Query
         uid: azure-iothub.Query
   - uid: azure-iothub.DeviceMethodParams
+    name: DeviceMethodParams
     spec.typeScript:
       - name: DeviceMethodParams
         fullName: DeviceMethodParams
         uid: azure-iothub.DeviceMethodParams
   - uid: Date | azure-iothub.JobClient.JobCallback
+    name: JobCallback
     spec.typeScript:
       - name: 'Date | '
         fullName: 'Date | '
@@ -300,6 +296,7 @@ references:
         fullName: JobCallback
         uid: azure-iothub.JobClient.JobCallback
   - uid: number | azure-iothub.JobClient.JobCallback
+    name: JobCallback
     spec.typeScript:
       - name: 'number | '
         fullName: 'number | '
@@ -307,6 +304,7 @@ references:
         fullName: JobCallback
         uid: azure-iothub.JobClient.JobCallback
   - uid: azure-iothub.JobClient
+    name: JobClient
     spec.typeScript:
       - name: JobClient
         fullName: JobClient
