--- a/docs-ref-autogen/azure-iothub/Registry.BulkDeviceIdentityCallback.yml
+++ b/docs-ref-autogen/azure-iothub/Registry.BulkDeviceIdentityCallback.yml
@@ -1,28 +1,14 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: azure-iothub.Registry.QueryDescription
-    name: QueryDescription
-    fullName: QueryDescription
-    children:
-      - azure-iothub.Registry.QueryDescription.query
-    langs:
-      - typeScript
-    type: interface
-    summary: ''
-    package: azure-iothub
-  - uid: azure-iothub.Registry.QueryDescription.query
-    name: query
-    fullName: query
+  - uid: azure-iothub.Registry.BulkDeviceIdentityCallback
+    name: BulkDeviceIdentityCallback
+    fullName: BulkDeviceIdentityCallback
     children: []
     langs:
       - typeScript
-    type: property
-    summary: ''
-    syntax:
-      content: 'query: string'
-      return:
-        type:
-          - string
+    type: class
+    summary: |+
+
     package: azure-iothub
 references:
   - uid: 'azure-iothub.Registry.DeviceRegistryOperationError[]'
