--- a/docs-ref-autogen/azure-iothub/Registry.yml
+++ b/docs-ref-autogen/azure-iothub/Registry.yml
@@ -4,7 +4,13 @@ items:
     name: Registry
     fullName: Registry
     children:
+      - azure-iothub.Registry.BulkRegistryOperationResult
+      - azure-iothub.Registry.DeviceDescription
+      - azure-iothub.Registry.DeviceRegistryOperationError
       - azure-iothub.Registry.JobStatus
+      - azure-iothub.Registry.QueryDescription
+      - azure-iothub.Registry.RegistryStatistics
+      - azure-iothub.Registry.TransportConfig
       - azure-iothub.Registry.BulkDeviceIdentityCallback
       - azure-iothub.Registry.BulkRegistryOperationType
       - azure-iothub.Registry.DeviceCallback
@@ -58,67 +64,6 @@ items:
       [fromSharedAccessSignature](xref:azure-iothub.Registry.fromSharedAccessSignature).
 
       The protocol used for device identity registry operations is HTTPS.
-    package: azure-iothub
-  - uid: azure-iothub.Registry.JobStatus
-    name: JobStatus
-    fullName: JobStatus
-    children: []
-    langs:
-      - typeScript
-    type: interface
-    summary: ''
-    package: azure-iothub
-  - uid: azure-iothub.Registry.BulkDeviceIdentityCallback
-    name: BulkDeviceIdentityCallback
-    fullName: BulkDeviceIdentityCallback
-    children: []
-    langs:
-      - typeScript
-    type: class
-    summary: |+
-
-    package: azure-iothub
-  - uid: azure-iothub.Registry.BulkRegistryOperationType
-    name: BulkRegistryOperationType
-    fullName: BulkRegistryOperationType
-    children: []
-    langs:
-      - typeScript
-    type: class
-    summary: >-
-
-      "BulkRegistryOperationType" is a type alias. It refers to "create",
-      "Update", "UpdateIfMatchETag", "Delete" and "DeleteIfMatchETag".
-    package: azure-iothub
-  - uid: azure-iothub.Registry.DeviceCallback
-    name: DeviceCallback
-    fullName: DeviceCallback
-    children: []
-    langs:
-      - typeScript
-    type: class
-    summary: |+
-
-    package: azure-iothub
-  - uid: azure-iothub.Registry.JobCallback
-    name: JobCallback
-    fullName: JobCallback
-    children: []
-    langs:
-      - typeScript
-    type: class
-    summary: |+
-
-    package: azure-iothub
-  - uid: azure-iothub.Registry.ResponseCallback
-    name: ResponseCallback
-    fullName: ResponseCallback
-    children: []
-    langs:
-      - typeScript
-    type: class
-    summary: |+
-
     package: azure-iothub
   - uid: azure-iothub.Registry.addConfiguration
     name: addConfiguration
@@ -1069,6 +1014,7 @@ items:
     package: azure-iothub
 references:
   - uid: 'azure-iothub.Registry.DeviceRegistryOperationError[]'
+    name: 'DeviceRegistryOperationError[]'
     spec.typeScript:
       - name: DeviceRegistryOperationError
         fullName: DeviceRegistryOperationError
@@ -1076,21 +1022,25 @@ references:
       - name: '[]'
         fullName: '[]'
   - uid: azure-iothub.Device.Capabilities
+    name: Capabilities
     spec.typeScript:
       - name: Capabilities
         fullName: Capabilities
         uid: azure-iothub.Device.Capabilities
   - uid: azure-iothub.Configuration
+    name: Configuration
     spec.typeScript:
       - name: Configuration
         fullName: Configuration
         uid: azure-iothub.Configuration
   - uid: azure-iothub.Registry.ResponseCallback
+    name: ResponseCallback
     spec.typeScript:
       - name: ResponseCallback
         fullName: ResponseCallback
         uid: azure-iothub.Registry.ResponseCallback
   - uid: 'azure-iothub.Registry.DeviceDescription[]'
+    name: 'DeviceDescription[]'
     spec.typeScript:
       - name: DeviceDescription
         fullName: DeviceDescription
@@ -1098,41 +1048,49 @@ references:
       - name: '[]'
         fullName: '[]'
   - uid: azure-iothub.Registry.BulkDeviceIdentityCallback
+    name: BulkDeviceIdentityCallback
     spec.typeScript:
       - name: BulkDeviceIdentityCallback
         fullName: BulkDeviceIdentityCallback
         uid: azure-iothub.Registry.BulkDeviceIdentityCallback
   - uid: azure-iothub.Module
+    name: Module
     spec.typeScript:
       - name: Module
         fullName: Module
         uid: azure-iothub.Module
   - uid: azure-iothub.ConfigurationContent
+    name: ConfigurationContent
     spec.typeScript:
       - name: ConfigurationContent
         fullName: ConfigurationContent
         uid: azure-iothub.ConfigurationContent
   - uid: azure-iothub.Registry.JobCallback
+    name: JobCallback
     spec.typeScript:
       - name: JobCallback
         fullName: JobCallback
         uid: azure-iothub.Registry.JobCallback
   - uid: azure-iothub.Registry.DeviceDescription
+    name: DeviceDescription
     spec.typeScript:
       - name: DeviceDescription
         fullName: DeviceDescription
         uid: azure-iothub.Registry.DeviceDescription
   - uid: azure-iothub.Registry.DeviceCallback
+    name: DeviceCallback
     spec.typeScript:
       - name: DeviceCallback
         fullName: DeviceCallback
         uid: azure-iothub.Registry.DeviceCallback
   - uid: azure-iothub.Query
+    name: Query
     spec.typeScript:
       - name: Query
         fullName: Query
         uid: azure-iothub.Query
   - uid: Callback<azure-iothub.Registry.RegistryStatistics>
+    name: RegistryStatistics>
     spec.typeScript:
       - name: Callback<
         fullName: Callback<
@@ -1142,6 +1100,7 @@ references:
       - name: '>'
         fullName: '>'
   - uid: 'Callback<azure-iothub.Device[]>'
+    name: 'Device[]>'
     spec.typeScript:
       - name: Callback<
         fullName: Callback<
@@ -1151,6 +1110,7 @@ references:
       - name: '[]>'
         fullName: '[]>'
   - uid: azure-iothub.Registry
+    name: Registry
     spec.typeScript:
       - name: Registry
         fullName: Registry
