--- a/docs-ref-autogen/azure-iothub/index.yml
+++ b/docs-ref-autogen/azure-iothub/index.yml
@@ -10,6 +10,8 @@ items:
       - azure-iothub.Client.ServiceReceiver
       - azure-iothub.Client.Transport
       - azure-iothub.Client.TransportConfigOptions
+      - azure-iothub.Client.Callback
+      - azure-iothub.Client.TransportCtor
       - azure-iothub.Configuration
       - azure-iothub.ConfigurationContent
       - azure-iothub.ConfigurationMetrics
@@ -18,8 +20,11 @@ items:
       - azure-iothub.Device.Authentication
       - azure-iothub.Device.Capabilities
       - azure-iothub.Device.X509Thumbprints
+      - azure-iothub.Device.ConnectionState
+      - azure-iothub.Device.DeviceStatus
       - azure-iothub.DeviceMethodParams
       - azure-iothub.JobClient
+      - azure-iothub.JobClient.JobCallback
       - azure-iothub.JobStatus
       - azure-iothub.JobType
       - azure-iothub.Module
@@ -28,9 +33,15 @@ items:
       - azure-iothub.Registry.BulkRegistryOperationResult
       - azure-iothub.Registry.DeviceDescription
       - azure-iothub.Registry.DeviceRegistryOperationError
+      - azure-iothub.Registry.JobStatus
       - azure-iothub.Registry.QueryDescription
       - azure-iothub.Registry.RegistryStatistics
       - azure-iothub.Registry.TransportConfig
+      - azure-iothub.Registry.BulkDeviceIdentityCallback
+      - azure-iothub.Registry.BulkRegistryOperationType
+      - azure-iothub.Registry.DeviceCallback
+      - azure-iothub.Registry.JobCallback
+      - azure-iothub.Registry.ResponseCallback
       - azure-iothub.ServiceReceiver
       - azure-iothub.create
       - azure-iothub.parse
@@ -51,6 +62,10 @@ references:
     name: Transport
   - uid: azure-iothub.Client.TransportConfigOptions
     name: TransportConfigOptions
+  - uid: azure-iothub.Client.Callback
+    name: Callback
+  - uid: azure-iothub.Client.TransportCtor
+    name: TransportCtor
   - uid: azure-iothub.Configuration
     name: Configuration
   - uid: azure-iothub.ConfigurationContent
@@ -67,10 +82,16 @@ references:
     name: Capabilities
   - uid: azure-iothub.Device.X509Thumbprints
     name: X509Thumbprints
+  - uid: azure-iothub.Device.ConnectionState
+    name: ConnectionState
+  - uid: azure-iothub.Device.DeviceStatus
+    name: DeviceStatus
   - uid: azure-iothub.DeviceMethodParams
     name: DeviceMethodParams
   - uid: azure-iothub.JobClient
     name: JobClient
+  - uid: azure-iothub.JobClient.JobCallback
+    name: JobCallback
   - uid: azure-iothub.JobStatus
     name: JobStatus
   - uid: azure-iothub.JobType
@@ -87,12 +108,24 @@ references:
     name: DeviceDescription
   - uid: azure-iothub.Registry.DeviceRegistryOperationError
     name: DeviceRegistryOperationError
+  - uid: azure-iothub.Registry.JobStatus
+    name: JobStatus
   - uid: azure-iothub.Registry.QueryDescription
     name: QueryDescription
   - uid: azure-iothub.Registry.RegistryStatistics
     name: RegistryStatistics
   - uid: azure-iothub.Registry.TransportConfig
     name: TransportConfig
+  - uid: azure-iothub.Registry.BulkDeviceIdentityCallback
+    name: BulkDeviceIdentityCallback
+  - uid: azure-iothub.Registry.BulkRegistryOperationType
+    name: BulkRegistryOperationType
+  - uid: azure-iothub.Registry.DeviceCallback
+    name: DeviceCallback
+  - uid: azure-iothub.Registry.JobCallback
+    name: JobCallback
+  - uid: azure-iothub.Registry.ResponseCallback
+    name: ResponseCallback
   - uid: azure-iothub.ServiceReceiver
     name: ServiceReceiver
   - uid: azure-iothub.create
